--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.ms-square:expandableTextView:0.1.4'
     testCompile 'junit:junit:4.12'
 }
