--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,8 @@
         </activity>
         <activity
             android:name=".FullPosterActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_full_poster"
-            android:parentActivityName=".DetailActivity"
-            android:theme="@style/FullscreenTheme">
+            android:parentActivityName=".DetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.leshik.moviedb.DetailActivity" />
