--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.ms-square:expandableTextView:0.1.4'
 
+    // PhotoView
+    compile 'com.github.chrisbanes:PhotoView:1.3.1'
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
