--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,34 +42,44 @@ repositories {
     mavenCentral()
 
 }
+ext {
+    supportLib = "25.3.0"
+    okHttpLib = "3.6.0"
+    butterKnifeLib = "8.5.1"
+    retrofitLib = "2.2.0"
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:cardview-v7:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile "com.android.support:appcompat-v7:${supportLib}"
+    compile "com.android.support:cardview-v7:${supportLib}"
+    compile "com.android.support:recyclerview-v7:${supportLib}"
+    compile "com.android.support:support-v4:${supportLib}"
+    compile "com.android.support:support-vector-drawable:${supportLib}"
+    compile "com.android.support:design:${supportLib}"
+    //
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
-    compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.android.support:support-vector-drawable:25.2.0'
-    compile 'com.android.support:design:25.2.0'
+    compile "com.squareup.okhttp3:okhttp:${okHttpLib}"
+    compile "com.squareup.okhttp3:okhttp-urlconnection:${okHttpLib}"
     compile 'com.ms-square:expandableTextView:0.1.4'
     // PhotoView
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
     // ButterKnife
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile "com.jakewharton:butterknife:${butterKnifeLib}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeLib}"
     // RxJava
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     // Retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile "com.squareup.retrofit2:retrofit:${retrofitLib}"
+    compile "com.squareup.retrofit2:converter-gson:${retrofitLib}"
+    compile "com.squareup.retrofit2:adapter-rxjava2:${retrofitLib}"
     compile 'com.google.code.gson:gson:2.8.0'
+    // Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //
     testCompile 'junit:junit:4.12'
 }
 
