--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compile "com.android.support:design:${supportLib}"
     //
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile "com.squareup.okhttp3:okhttp:${okHttpLib}"
+//    compile "com.squareup.okhttp3:okhttp:${okHttpLib}"
     compile "com.squareup.okhttp3:okhttp-urlconnection:${okHttpLib}"
     compile 'com.ms-square:expandableTextView:0.1.4'
     // PhotoView
@@ -79,6 +79,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     //
     testCompile 'junit:junit:4.12'
 }
